INCLUDES = $(all_includes) -I$(top_builddir)/amarok/amarok/amarokcore
METASOURCES = AUTO
noinst_LIBRARIES =  libanalyzers.a
noinst_HEADERS = analyzerbase.h analyzerbase2d.h analyzerbase3d.h blockanalyzer.h baranalyzer.h baranalyzer2.h distortanalyzer.h sonogram.h turbine.h xmasdrug.h glanalyzer.h
libanalyzers_a_SOURCES = analyzerbase.cpp analyzerbase2d.cpp analyzerbase3d.cpp analyzerfactory.cpp blockanalyzer.cpp baranalyzer.cpp distortanalyzer.cpp sonogram.cpp turbine.cpp xmasdrug.cpp baranalyzer2.cpp glanalyzer.cpp
