libanalyzers_a_METASOURCES = AUTO

noinst_LIBRARIES =  libanalyzers.a

INCLUDES = \
	$(all_includes) \
	-I$(top_builddir)/amarok/amarok/amarokcore

noinst_HEADERS = \
	analyzerbase.h \
	blockanalyzer.h \
	baranalyzer.h \
	baranalyzer2.h \
	distortanalyzer.h \
	sonogram.h \
	turbine.h \
	xmasdrug.h \
	glanalyzer.h \
	glanalyzer2.h \
	blowanalyzer.h

libanalyzers_a_SOURCES = \
	analyzerbase.cpp \
	analyzerfactory.cpp \
	blockanalyzer.cpp \
	baranalyzer.cpp \
	distortanalyzer.cpp \
	sonogram.cpp \
	turbine.cpp \
	xmasdrug.cpp \
	baranalyzer2.cpp \
	glanalyzer.cpp \
	glanalyzer2.cpp \
	blowanalyzer.cpp
