imagesdir = $(kde_datadir)/amarok/images
images_DATA = amaroKonlyHG_w320.jpg eq_active.png eq_inactive.png \
	b_next.png \
	b_next_down.png \
	b_pause.png \
	b_pause_down.png \
	b_play.png \
	b_play_down.png \
	b_prev.png \
	b_prev_down.png \
	b_stop.png \
	b_stop_down.png \
	logo_new_active.png logo_new_inactive.png \
	numbers_transp.png pl_active.png \
	pl_inactive.png \
	logo_web.png
