imagesdir = $(kde_datadir)/amarok/images
images_DATA = b_next.png b_next_down.png b_pause.png b_pause_down.png b_play.png b_play_down.png b_prev.png b_prev_down.png b_stop.png b_stop_down.png logo_web.png bucky.png pl_active2.png pl_inactive2.png eq_active2.png eq_inactive2.png time_minus.png time_plus.png vol_speaker.png description.png
