noinst_LTLIBRARIES = \
    libanalyzers.la

METASOURCES = \
    AUTO

INCLUDES = \
    -I$(top_builddir)/amarok/amarok/amarokcore \
    -I$(top_srcdir)/amarok/amarok/engine \
    -I$(top_srcdir)/amarok/amarok/plugin \
    -I$(top_srcdir)/amarok/amarok \
    $(all_includes)

libanalyzers_la_SOURCES = \
    analyzerbase.cpp \
    analyzerfactory.cpp \
    baranalyzer.cpp \
    blockanalyzer.cpp \
    glanalyzer.cpp \
    glanalyzer2.cpp \
    glanalyzer3.cpp \
    sonogram.cpp \
    turbine.cpp



    
