noinst_LTLIBRARIES = \
    libanalyzers.la

METASOURCES = \
    AUTO

INCLUDES = \
    -I$(top_builddir)/amarok/src/amarokcore \
    -I$(top_builddir)/amarok/src \
    -I$(top_srcdir)/amarok/src/amarokcore \
    -I$(top_srcdir)/amarok/src/engine \
    -I$(top_srcdir)/amarok/src/plugin \
    -I$(top_srcdir)/amarok/src \
    $(all_includes)

libanalyzers_la_SOURCES = \
    analyzerbase.cpp \
    analyzerfactory.cpp \
    baranalyzer.cpp \
    blockanalyzer.cpp \
    glanalyzer.cpp \
    glanalyzer2.cpp \
    glanalyzer3.cpp \
    sonogram.cpp \
    turbine.cpp \
    boomanalyzer.cpp



    
